[LandingPage] feat: 폰트 설치 및 불필요한 파일 제거

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "paths": {
       "@Assets/*": ["./src/assets/*"],
       "@Components/*": ["./src/components/*"],
-      "@Pages/*": ["./src/pages/*"]
+      "@Pages/*": ["./src/pages/*"],
+      "@Utils/*": ["./src/utils/*"]
     },
 
     /* Bundler mode */
