[LandingPage] feat: 마크업

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "paths": {
       "@Assets/*": ["./src/assets/*"],
       "@Components/*": ["./src/components/*"],
+      "@Constant/*": ["./src/constant/*"],
       "@Pages/*": ["./src/pages/*"],
       "@Utils/*": ["./src/utils/*"]
     },
