--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.32.0",
+    "@types/lodash": "^4.17.0",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
