--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.32.0",
+    "@theatre/core": "^0.7.2",
+    "@theatre/studio": "^0.7.2",
     "@types/lodash": "^4.17.0",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.7",
