--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --mode dev",
     "build": "vite build --mode production",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . ",
     "preview": "vite preview",
     "lint-ts": "tsc --noEmit"
   },
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
+    "tailwind-merge": "^2.6.0",
     "ua-parser-js": "^1.0.37"
   },
   "devDependencies": {
